I modified and corrected some mistakes in index.html and main.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="container">
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="mic" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="mic" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -33,7 +33,7 @@
 			</div>
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="guitar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="guitar" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -47,7 +47,7 @@
 			</div>
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="record" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="record" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -62,7 +62,7 @@
 			</div>
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="drums" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="drums" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -76,7 +76,7 @@
 			</div>
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="piano" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="piano" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -93,7 +93,7 @@
 		<div class="container">
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="saxophone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="saxophone" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -108,7 +108,7 @@
 			</div>
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="pan_x5F_flute" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+<svg id="panFlute" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 	 y="0px" viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -124,7 +124,7 @@
 			</div>
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="headphones" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="headphones" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -139,7 +139,7 @@
 			</div>
 			<div class="icon">
 								<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="trumpet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="trumpet" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
@@ -154,7 +154,7 @@
 			</div>
 			<div class="icon">
 				<?xml version="1.0" encoding="utf-8"?>
-<svg version="1.1" class="icon_click" id="mandolin" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="mandolin" version="1.1" class="icon_click" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#5E2384;}
